--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,7 +2,7 @@ global:
   scrape_interval:     15s
   evaluation_interval: 15s
 
-rule_files:
+# rule_files:
   # - "first.rules"
   # - "second.rules"
 
@@ -10,6 +10,10 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+  - job_name: 'node'
+    static_configs:
+      - targets: ['192.168.1.2:9100']
   - job_name: 'postgres'
     static_configs:
-      - targets: ['postgres_exporter:9187']
+      - targets: ['postgres_exporter_one:9187']
+      - targets: ['postgres_exporter_two:9187']
